# SCOPE_EXIT

./: .gitignore
build_scripts/: cmake_unix.sh  cmake_unix_cpp17_mode.sh  cmake_win64.bat  cmake_win64_vs2019_debug.bat  cmake_win64_vs2019_debug_cpp17_mode.bat  cmake_win64_vs2019_release.bat  cmake_win64_vs2019_release_cpp17_mode.bat
scope_exit/: scope_exit.hpp
scope_exit_tests/: CMakeLists.txt  CMakeLists.txt.in  test_scope_exit.cpp
